@@ -1,3 +1,8 @@
+2008-11-14  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-connection.[ch],
+	* src/vinagre-tab.c: Better parse a .vnc file. Closes #559525.
+
 2008-11-13  Jonh Wendell <jwendell@gnome.org>
 
 	* src/vinagre-connection.[ch],
